--- a/TurnSystem2/TurnSystem2.vcxproj
+++ b/TurnSystem2/TurnSystem2.vcxproj
@@ -148,6 +148,9 @@
     <ClInclude Include="skill.h" />
     <ClInclude Include="unit.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="skillList.json" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
