--- a/TurnSystem2/TurnSystem2.vcxproj
+++ b/TurnSystem2/TurnSystem2.vcxproj
@@ -143,13 +143,16 @@
     <ClCompile Include="skill.cpp" />
     <ClCompile Include="TurnSystem2.cpp" />
     <ClCompile Include="unit.cpp" />
+    <ClCompile Include="UnitBuilder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="skill.h" />
     <ClInclude Include="unit.h" />
+    <ClInclude Include="UnitBuilder.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="skillList.json" />
+    <None Include="unitList.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
